--- a/styles/main.css
+++ b/styles/main.css
@@ -412,6 +412,7 @@ main {
           }
 
           textarea {
+            padding: 20px;
             background-color: rgba(233, 233, 233, 0.7);
             outline: none;
             border: none;
