--- a/styles/header.css
+++ b/styles/header.css
@@ -10,6 +10,7 @@ header {
     .container {
       display: flex;
       justify-content: space-between;
+      align-items: center;
 
       .socials {
         display: flex;
