--- a/styles/main.css
+++ b/styles/main.css
@@ -384,7 +384,7 @@ main {
           input {
             background-color: rgba(233, 233, 233, 0.7);
             outline: none;
-            border: none;
+            border: 2px solid rgb(223, 223, 223);
             padding: 15px 40px;
             width: 300px;
             font-size: 15px;
@@ -402,7 +402,7 @@ main {
           position: relative;
           display: flex;
           flex-direction: column;
-          width: 790px;
+          width: 795px;
 
           label {
             font-size: 15px;
@@ -418,6 +418,7 @@ main {
             border: none;
             min-height: 200px;
             resize: none;
+            border: 2px solid rgb(223, 223, 223);
           }
         }
 
